2012-08-14  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in: New file
	* .gitignore: Add install-sh.

2012-08-13  Earnie Boyd  <earnie@users.sourceforge.net>

	* .gitignore (Makefile.in): Remove entry.
	(*.bak): Add entry.

2012-08-12  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/CVS/*: Remove accidentally added CVS directories.
	* .gitignore (*.log): Ignore all .log file types.

2012-08-11  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/*: Add combined winsup/mingw and winsup/w32api include files.

2012-08-08  Earnie Boyd  <earnie@users.sourceforge.net>

	* ChangeLog: New file.
	* LICENSE: Ditto.
	* README: Ditto.
	* .gitignore: Ditto.